<resources>
    <string name="app_name">UserApp</string>
    <string name="user_info">User Information</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job Title</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="user_details">User Details</string>
    <string name="name_label">Name:</string>
    <string name="age_label">Age:</string>
    <string name="job_label">Job Title:</string>
    <string name="gender_label">Gender:</string>
</resources>